--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,8 +1,11 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
+  "main": "src/index.ts",
+ "scripts": {
+    "dev": "nodemon src/index.ts",
+    "build": "tsc", 
+    "start": "node dist/index.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
