--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,10 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "main": "src/index.ts",
- "scripts": {
+  "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc", 
-    "start": "node dist/index.js", 
+    "build": "tsc",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "firebase-admin": "^13.4.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
