--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.4.0",
     "nodemon": "^3.1.10",
+    "rrule": "^2.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
